# ChangeLog for dev-util/kdevelop
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdevelop/ChangeLog,v 1.91 2005/07/21 08:39:12 greg_g Exp $

  21 Jul 2005; Gregorio Guidi <greg_g@gentoo.org> kdevelop-3.2.1-r1.ebuild:
  Stable on x86.

*kdevelop-3.2.1-r1 (16 Jul 2005)

  16 Jul 2005; Gregorio Guidi <greg_g@gentoo.org>
  +files/kdevelop-3.2.1-makefiles.patch, +kdevelop-3.2.1-r1.ebuild:
  Add patch to fix support for custom makefiles (#86780). Update the template
  for KDE projects (see kde bug 104386).

  03 Jul 2005; Carsten Lohrke <carlo@gentoo.org> kdevelop-3.2.1.ebuild:
  we depend on cervisia for cvs support

  10 Jun 2005; Diego Pettenò <flameeyes@gentoo.org>
  +files/kdevelop-3.2.1-gcc4.patch, kdevelop-3.2.1.ebuild:
  Added patch to fix compilation with GCC4 (already fixed on SVN before).

*kdevelop-3.2.1 (27 May 2005)

  27 May 2005; Gregorio Guidi <greg_g@gentoo.org> +kdevelop-3.2.1.ebuild:
  New version.

  21 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> kdevelop-3.1.2.ebuild:
  Stable on ppc.

  20 Mar 2005; Carsten Lohrke <carlo@gentoo.org> -kdevelop-3.1.1.ebuild,
  kdevelop-3.1.2.ebuild, kdevelop-3.2.0.ebuild, -kdevelop-3.2.0_beta1.ebuild,
  -kdevelop-3.2.0_beta2.ebuild, -kdevelop-3.2.0_rc1.ebuild:
  fixed typo, clean up

*kdevelop-3.2.0 (14 Mar 2005)

  14 Mar 2005; Gregorio Guidi <greg_g@gentoo.org> +kdevelop-3.2.0.ebuild:
  Ebuild for 3.2 final.

*kdevelop-3.2.0_rc1 (27 Feb 2005)

  27 Feb 2005; Gregorio Guidi <greg_g@gentoo.org> +kdevelop-3.2.0_rc1.ebuild:
  New version. Cleanup of dependencies and use flags, making kdevelop more
  configurable (#81604).

  24 Feb 2005; Gregorio Guidi <greg_g@gentoo.org> -files/htdig.conf,
  -kdevelop-3.0.4.ebuild:
  Remove old version.

  24 Feb 2005; Simon Stelling <blubb@gentoo.org> kdevelop-3.1.2.ebuild:
  stable on amd64

*kdevelop-3.2.0_beta2 (09 Feb 2005)
