@@ -1,11 +1,13 @@
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 MD5 c1e9d1f05701de9269898beb50b4476c kdevelop-3.2.1-r1.ebuild 2861
 MD5 f655767a8b91ae8cb1d3f14492ee6834 kdevelop-3.1.2.ebuild 2722
-MD5 ef8bbc3dedc5360f3882ee9636bd29da ChangeLog 14279
+MD5 c0d824e1ae6a7f11dd429e8e51d850ee ChangeLog 14400
+MD5 ce4bbae437f152af30879937e72a631f kdevelop-3.2.2.ebuild 2832
 MD5 d38abdd4874e7ceda8abefbe79b8a588 kdevelop-3.2.1.ebuild 2603
 MD5 b7e0a740f84187b6165568ddc5ba978b kdevelop-3.2.0.ebuild 2592
 MD5 dcdcaf1dea68db854de8dad4df83c096 files/kdevelop-3.1_beta1-bdb-fPIC.patch 391
 MD5 3e9fd708ae657cffd1d68041f52aabc8 files/digest-kdevelop-3.2.1-r1 68
+MD5 a94b1b00d38f496db64b8fcbd85bbb9b files/digest-kdevelop-3.2.2 68
 MD5 72bf5d9a24a821f9584ec59ccf1a2d6e files/kdevelop-3.2.1-gcc4.patch 446
 MD5 1760f21a5c2d5c152495c12af8232d04 files/kdevelop-3.2.1-makefiles.patch 815
 MD5 9baadc6b0dcbb08db8c865897cf4cf43 files/kdevelop-3.1.0-bdb-mutex.patch 656
