@@ -1,0 +1,1 @@
+MD5 6d788b8ec89ea9b19f5c281a574b48fe kdevelop-3.2.2.tar.bz2 8350892
