@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/kdevelop
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdevelop/ChangeLog,v 1.91 2005/07/21 08:39:12 greg_g Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdevelop/ChangeLog,v 1.92 2005/07/28 13:11:28 greg_g Exp $
+
+*kdevelop-3.2.2 (28 Jul 2005)
+
+  28 Jul 2005; Gregorio Guidi <greg_g@gentoo.org> +kdevelop-3.2.2.ebuild:
+  New version.
 
   21 Jul 2005; Gregorio Guidi <greg_g@gentoo.org> kdevelop-3.2.1-r1.ebuild:
   Stable on x86.
